--- a/style.css
+++ b/style.css
@@ -23,8 +23,16 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  font-family: var(--ff-sans-serif);
+}
 
-  overflow: hidden;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.1;
 }
 
 /* Make images easier to work with */
@@ -58,6 +66,11 @@ select {
   }
 }
 
+hr {
+  border-bottom: 0;
+  border-top: 1px solid var(--clr-dark-blue);
+  margin-block: 1.25rem;
+}
 
 /* ------------------- */
 /* Custom Properties   */
@@ -76,9 +89,9 @@ select {
 
   /* font sizes */
 
-  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);;
-  --fs-800: 3.5rem;
-  --fs-700: 1.25rem;
+  --fs-900: 2.5rem;;
+  --fs-800: 2rem;
+  --fs-700: 1.5rem;
   --fs-600: 1rem;
   --fs-400: 0.9375rem; 
 
@@ -95,15 +108,15 @@ select {
 
 @media (min-width: 35em) {
   :root {
-    --fs-900: 5rem;
-    --fs-800: 2rem;
-    --fs-700: 1.15rem;
+    --fs-900: 3.5rem;
+    --fs-800: 3rem;
+    --fs-700: 2rem;
   }
 } 
 
 @media (min-width: 45em) {
   :root {
-    --fs-900: 6.25rem;
+    --fs-900: 4rem;
     --fs-800: 3rem;
   }
 }
@@ -137,9 +150,8 @@ select {
 }
 
 .container {
-  padding-inline: 2em;
+  padding: 1em;
   margin-inline: auto;
-  max-width: 80rem;
 }
 
 .sr-only {
@@ -187,6 +199,10 @@ select {
   color: var(--clr-off-white);
 }
 
+.text-dark-blue {
+  color: var(--clr-dark-blue);
+}
+
 .text-blue {
   color: var(--clr-grayish-blue);
 }
@@ -196,6 +212,14 @@ select {
 }
 
 /* typography */
+
+.line-height-p {
+  line-height: 1.5;
+}
+
+.line-height-small {
+  line-height: 1.4;
+}
 
 .ff-sans-serif {
   font-family: var(--ff-sans-serif);
@@ -241,10 +265,34 @@ select {
   line-height: 1.1;
 }
 
+.fw-400 {
+  font-weight: var(--fw-400);
+}
+
+.fw-700 {
+  font-weight: var(--fw-700);
+}
+
+.fw-800 {
+  font-weight: var(--fw-800);
+}
+
 /* primary-header */
 
+.button {
+  cursor: pointer;
+  border: transparent;
+  padding: .5em 1.75em;
+  background-color: var(--clr-red);
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--clr-very-dark-blue);
+}
+
 .logo {
-  margin: 1rem clamp(1.5rem, 5vw, 3.5rem);
+  margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
 }
 
 .primary-header {
@@ -330,20 +378,85 @@ select {
   }
 }
 
+.nav-text {
+  color: var(--clr-very-dark-blue);
+}
+
+@media (min-width: 35em) {
+  .nav-text {
+    color: var(--clr-grayish-blue);
+  }
+}
+
+
+
 /* ----------------------------- */
 /* Layout                        */
 /* ----------------------------- */
 
+/* portrait mobile layout */
+
 .grid-container {
-  text-align: center;
+  text-align: left;
   display: grid;
+  gap: 1.5rem;
   place-items: center;
   padding-inline: 1rem;
   padding-bottom: 4rem;
+  grid-template-columns: minmax(0, 50rem);
+
+  grid-template-areas: 
+  'top'
+  'middle'
+  'bottom';
 }
 
-.main-title {
-  grid-area: title;
+.top {
+  grid-area: top;
 }
+
+.middle {
+  grid-area: middle;
+}
+
+.bottom {
+  grid-area: bottom;
+  margin-block-start: 1.5em;
+}
+
+.middle h2 {
+  margin-block-end: 1em;
+}
+
+.middle p {
+  margin-block-start: .5em;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.bottom-content h4 {
+  margin: .5rem 0;
+}
+
+.grid-container--bottom {
+  display: grid;
+  align-items: end;
+  grid-template-columns: minmax(0, 40%) minmax(0, 60%);
+  grid-template-areas: 'image content';
+}
+
+.grid-container--bottom > .bottom-content {
+  grid-area: content;
+}
+
+.grid-container--bottom > .bottom-image {
+  grid-area: image;
+  
+}
+
 
 
