--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ hr {
   --fs-800: 2rem;
   --fs-700: 1.5rem;
   --fs-600: 1rem;
+  --fs-500: .875rem;
   --fs-400: 0.9375rem; 
 
   /* font weights*/
@@ -118,6 +119,7 @@ hr {
   :root {
     --fs-900: 4rem;
     --fs-800: 3rem;
+    --fs-500: .5rem;
   }
 }
 
@@ -150,7 +152,7 @@ hr {
 }
 
 .container {
-  padding: 1em;
+  padding-inline: 1em;
   margin-inline: auto;
 }
 
@@ -436,8 +438,6 @@ hr {
   grid-area: bottom;
 }
 
-
-
 .middle h2 {
   margin-block-end: 1em;
 }
@@ -480,6 +480,10 @@ hr {
 
 @media (min-width: 45em) {
 
+  .nav-text {
+    font-size: .75rem;
+  }
+
   hr {
     margin-block: 2rem;
   }
@@ -493,20 +497,30 @@ hr {
     gap: 2rem;
     place-items: start;
     justify-items: start;
+    margin-block-start: 3rem;
     grid-template-areas: 
     'top-image top-image middle'
     'top-content top-content middle'
     'bottom bottom bottom';
   }
 
+  .grid-container--top {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 2em;
+    margin-bottom: 3rem;
+  }
+
   .flex-container {
     flex-direction: row;
+    justify-content: space-between;
   }
 
   .top-content {
     display: flex;
     justify-content: space-between;
     align-items: start;
+    margin-block-start: 2rem;
   }
 
   .text-content {
@@ -518,7 +532,6 @@ hr {
   }
 
   .button {
-    /* margin-top: 4em; */
     align-self: flex-start;
   }
 
